SLING-9362 : Use Apache Felix cm.json for JSON handling